rust/RustCommentParser.py
# Generated from RustComment.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class RustCommentParser ( Parser ):

    grammarFileName = "RustComment.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\n//'", "'/**'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "END_SYMBOL", "TEXT", "NL", "IGNORED_ALPHA", 
                      "IGNORED_SYMBOLS" ]

    RULE_sourceFile = 0
    RULE_comment = 1
    RULE_blockComment = 2
    RULE_codeDeclaration = 3
    RULE_ignored = 4
    RULE_ignoredPreamble = 5

    ruleNames =  [ "sourceFile", "comment", "blockComment", "codeDeclaration", 
                   "ignored", "ignoredPreamble" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    WS=3
    LINE_COMMENT=4
    BLOCK_COMMENT=5
    END_SYMBOL=6
    TEXT=7
    NL=8
    IGNORED_ALPHA=9
    IGNORED_SYMBOLS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ignoredPreamble(self):
            return self.getTypedRuleContext(RustCommentParser.IgnoredPreambleContext,0)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustCommentParser.CommentContext)
            else:
                return self.getTypedRuleContext(RustCommentParser.CommentContext,i)


        def ignored(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustCommentParser.IgnoredContext)
            else:
                return self.getTypedRuleContext(RustCommentParser.IgnoredContext,i)


        def getRuleIndex(self):
            return RustCommentParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)




    def sourceFile(self):

        localctx = RustCommentParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.ignoredPreamble()
            self.state = 16 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 13
                self.comment()
                self.state = 14
                self.ignored()
                self.state = 18 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RustCommentParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(RustCommentParser.NL, 0)

        def blockComment(self):
            return self.getTypedRuleContext(RustCommentParser.BlockCommentContext,0)


        def codeDeclaration(self):
            return self.getTypedRuleContext(RustCommentParser.CodeDeclarationContext,0)


        def ignoredPreamble(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustCommentParser.IgnoredPreambleContext)
            else:
                return self.getTypedRuleContext(RustCommentParser.IgnoredPreambleContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RustCommentParser.CommentContext)
            else:
                return self.getTypedRuleContext(RustCommentParser.CommentContext,i)


        def getRuleIndex(self):
            return RustCommentParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = RustCommentParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(RustCommentParser.NL)
            self.state = 21
            self.blockComment()
            self.state = 22
            self.codeDeclaration()
            self.state = 28
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 23
                    self.ignoredPreamble()
                    self.state = 24
                    self.comment() 
                self.state = 30
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockCommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK_COMMENT(self):
            return self.getToken(RustCommentParser.BLOCK_COMMENT, 0)

        def NL(self):
            return self.getToken(RustCommentParser.NL, 0)

        def getRuleIndex(self):
            return RustCommentParser.RULE_blockComment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockComment" ):
                listener.enterBlockComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockComment" ):
                listener.exitBlockComment(self)




    def blockComment(self):

        localctx = RustCommentParser.BlockCommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blockComment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(RustCommentParser.BLOCK_COMMENT)
            self.state = 32
            self.match(RustCommentParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(RustCommentParser.TEXT)
            else:
                return self.getToken(RustCommentParser.TEXT, i)

        def END_SYMBOL(self):
            return self.getToken(RustCommentParser.END_SYMBOL, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(RustCommentParser.NL)
            else:
                return self.getToken(RustCommentParser.NL, i)

        def getRuleIndex(self):
            return RustCommentParser.RULE_codeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeDeclaration" ):
                listener.enterCodeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeDeclaration" ):
                listener.exitCodeDeclaration(self)




    def codeDeclaration(self):

        localctx = RustCommentParser.CodeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_codeDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(RustCommentParser.TEXT)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RustCommentParser.NL:
                self.state = 35
                self.match(RustCommentParser.NL)
                self.state = 36
                self.match(RustCommentParser.TEXT)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(RustCommentParser.END_SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgnoredContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END_SYMBOL(self):
            return self.getToken(RustCommentParser.END_SYMBOL, 0)

        def getRuleIndex(self):
            return RustCommentParser.RULE_ignored

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored" ):
                listener.enterIgnored(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored" ):
                listener.exitIgnored(self)




    def ignored(self):

        localctx = RustCommentParser.IgnoredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ignored)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(RustCommentParser.END_SYMBOL)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 45
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==RustCommentParser.T__0:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IgnoredPreambleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RustCommentParser.RULE_ignoredPreamble

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnoredPreamble" ):
                listener.enterIgnoredPreamble(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnoredPreamble" ):
                listener.exitIgnoredPreamble(self)




    def ignoredPreamble(self):

        localctx = RustCommentParser.IgnoredPreambleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ignoredPreamble)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 51
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==RustCommentParser.T__1:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





